--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-<h1>Hello world! This is a new change!</h1>
+<h1>Hello world! This is a StarterKit!</h1>
 </body>
 </html>
